crux-mir/test/symb_eval/crux/fail_return.good
test fail_return/<DISAMB>::fail1[0]: returned Symbolic BV, FAILED
test fail_return/<DISAMB>::fail2[0]: returned 123, FAILED

failures:

---- fail_return/<DISAMB>::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/fail_return.rs:8:22: 8:27: error: in fail_return/<DISAMB>::fail1[0]
[Crux]   attempt to compute `copy _0 + const 1_u8`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crux/fail_return.rs:8:5: 8:32: error: in fail_return/<DISAMB>::fail1[0]
[Crux]   MIR assertion at test/symb_eval/crux/fail_return.rs:8:5:
[Crux]   	x + 1 > x

---- fail_return/<DISAMB>::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/fail_return.rs:15:22: 15:27: error: in fail_return/<DISAMB>::fail2[0]
[Crux]   attempt to compute `copy _1 + const 1_u8`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crux/fail_return.rs:15:5: 15:32: error: in fail_return/<DISAMB>::fail2[0]
[Crux]   MIR assertion at test/symb_eval/crux/fail_return.rs:15:5:
[Crux]   	x + 1 > x

[Crux] Overall status: Invalid.
